# lcmaps-plugins-static-mapping-historical

./: .gitignore  Makefile.am  README  bootstrap  configure.ac  glexec-mapfile  lcmaps-plugins-static-mapping.spec
src/: lcmaps_static_mapping.c  proc_info.c  proc_info.h  static_mapping.cpp  static_mapping.h
